src/lib/promql/PromQLParser.ts
// Generated from dt-sql-parser/src/grammar/promql/PromQLParser.g4 by ANTLR 4.13.1

// @ts-nocheck

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PromQLParserListener } from "./PromQLParserListener.js";
import { PromQLParserVisitor } from "./PromQLParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


import { SQLParserBase } from '../SQLParserBase';  // 在生成的代码中导入基类


export class PromQLParser extends SQLParserBase {
    public static readonly NUMERAL = 1;
    public static readonly SCIENTIFIC_NUMBER = 2;
    public static readonly STRING = 3;
    public static readonly KW_AND = 4;
    public static readonly KW_OR = 5;
    public static readonly KW_UNLESS = 6;
    public static readonly KW_BY = 7;
    public static readonly KW_WITHOUT = 8;
    public static readonly KW_ON = 9;
    public static readonly KW_IGNORING = 10;
    public static readonly KW_GROUP_LEFT = 11;
    public static readonly KW_GROUP_RIGHT = 12;
    public static readonly KW_OFFSET = 13;
    public static readonly KW_BOOL = 14;
    public static readonly KW_SUM = 15;
    public static readonly KW_MIN = 16;
    public static readonly KW_MAX = 17;
    public static readonly KW_AVG = 18;
    public static readonly KW_GROUP = 19;
    public static readonly KW_STDDEV = 20;
    public static readonly KW_STDVAR = 21;
    public static readonly KW_COUNT = 22;
    public static readonly KW_COUNT_VALUES = 23;
    public static readonly KW_BOTTOMK = 24;
    public static readonly KW_TOPK = 25;
    public static readonly KW_QUANTILE = 26;
    public static readonly KW_ABS = 27;
    public static readonly KW_CEIL = 28;
    public static readonly KW_FLOOR = 29;
    public static readonly KW_ROUND = 30;
    public static readonly KW_SQRT = 31;
    public static readonly KW_EXP = 32;
    public static readonly KW_LN = 33;
    public static readonly KW_LOG2 = 34;
    public static readonly KW_LOG10 = 35;
    public static readonly KW_SGN = 36;
    public static readonly KW_PI = 37;
    public static readonly KW_DEG = 38;
    public static readonly KW_RAD = 39;
    public static readonly KW_ACOS = 40;
    public static readonly KW_ACOSH = 41;
    public static readonly KW_ASIN = 42;
    public static readonly KW_ASINH = 43;
    public static readonly KW_ATAN = 44;
    public static readonly KW_ATANH = 45;
    public static readonly KW_COS = 46;
    public static readonly KW_COSH = 47;
    public static readonly KW_SIN = 48;
    public static readonly KW_SINH = 49;
    public static readonly KW_TAN = 50;
    public static readonly KW_TANH = 51;
    public static readonly KW_TIME = 52;
    public static readonly KW_TIMESTAMP = 53;
    public static readonly KW_HOUR = 54;
    public static readonly KW_MINUTE = 55;
    public static readonly KW_MONTH = 56;
    public static readonly KW_YEAR = 57;
    public static readonly KW_DAY_OF_MONTH = 58;
    public static readonly KW_DAY_OF_WEEK = 59;
    public static readonly KW_DAY_OF_YEAR = 60;
    public static readonly KW_DAYS_IN_MONTH = 61;
    public static readonly KW_DELTA = 62;
    public static readonly KW_DERIV = 63;
    public static readonly KW_IDELTA = 64;
    public static readonly KW_INCREASE = 65;
    public static readonly KW_RATE = 66;
    public static readonly KW_IRATE = 67;
    public static readonly KW_RESETS = 68;
    public static readonly KW_PRESENT_OVER_TIME = 69;
    public static readonly KW_HISTOGRAM_COUNT = 70;
    public static readonly KW_HISTOGRAM_SUM = 71;
    public static readonly KW_HISTOGRAM_FRACTION = 72;
    public static readonly KW_HISTOGRAM_QUANTILE = 73;
    public static readonly KW_QUANTILE_OVER_TIME = 74;
    public static readonly KW_AVG_OVER_TIME = 75;
    public static readonly KW_MIN_OVER_TIME = 76;
    public static readonly KW_MAX_OVER_TIME = 77;
    public static readonly KW_SUM_OVER_TIME = 78;
    public static readonly KW_COUNT_OVER_TIME = 79;
    public static readonly KW_STDDEV_OVER_TIME = 80;
    public static readonly KW_STDVAR_OVER_TIME = 81;
    public static readonly KW_LAST_OVER_TIME = 82;
    public static readonly KW_ABSENT = 83;
    public static readonly KW_ABSENT_OVER_TIME = 84;
    public static readonly KW_PREDICT_LINEAR = 85;
    public static readonly KW_HOLT_WINTERS = 86;
    public static readonly KW_LABEL_JOIN = 87;
    public static readonly KW_LABEL_REPLACE = 88;
    public static readonly KW_SCALAR = 89;
    public static readonly KW_VECTOR = 90;
    public static readonly KW_SORT = 91;
    public static readonly KW_SORT_DESC = 92;
    public static readonly KW_CHANGES = 93;
    public static readonly KW_CLAMP = 94;
    public static readonly KW_CLAMP_MAX = 95;
    public static readonly KW_CLAMP_MIN = 96;
    public static readonly ADD = 97;
    public static readonly SUB = 98;
    public static readonly MULT = 99;
    public static readonly DIV = 100;
    public static readonly MOD = 101;
    public static readonly POW = 102;
    public static readonly EQ = 103;
    public static readonly DEQ = 104;
    public static readonly NE = 105;
    public static readonly GT = 106;
    public static readonly LT = 107;
    public static readonly GE = 108;
    public static readonly LE = 109;
    public static readonly RE = 110;
    public static readonly NRE = 111;
    public static readonly LEFT_BRACE = 112;
    public static readonly RIGHT_BRACE = 113;
    public static readonly LEFT_PAREN = 114;
    public static readonly RIGHT_PAREN = 115;
    public static readonly LEFT_BRACKET = 116;
    public static readonly RIGHT_BRACKET = 117;
    public static readonly COMMA = 118;
    public static readonly SEMI = 119;
    public static readonly AT = 120;
    public static readonly SUBQUERY_RANGE = 121;
    public static readonly TIME_RANGE = 122;
    public static readonly DURATION = 123;
    public static readonly METRIC_NAME = 124;
    public static readonly LABEL_NAME = 125;
    public static readonly WS = 126;
    public static readonly SL_COMMENT = 127;
    public static readonly RULE_program = 0;
    public static readonly RULE_singleStmt = 1;
    public static readonly RULE_stmt = 2;
    public static readonly RULE_unaryOp = 3;
    public static readonly RULE_powOp = 4;
    public static readonly RULE_multOp = 5;
    public static readonly RULE_addOp = 6;
    public static readonly RULE_compareOp = 7;
    public static readonly RULE_vector = 8;
    public static readonly RULE_instantSelector = 9;
    public static readonly RULE_labelMatcher = 10;
    public static readonly RULE_labelMatcherOperator = 11;
    public static readonly RULE_labelMatcherList = 12;
    public static readonly RULE_matrixSelector = 13;
    public static readonly RULE_parameter = 14;
    public static readonly RULE_parameterList = 15;
    public static readonly RULE_by = 16;
    public static readonly RULE_without = 17;
    public static readonly RULE_grouping = 18;
    public static readonly RULE_on_ = 19;
    public static readonly RULE_ignoring = 20;
    public static readonly RULE_groupLeft = 21;
    public static readonly RULE_groupRight = 22;
    public static readonly RULE_labelName = 23;
    public static readonly RULE_labelNameList = 24;
    public static readonly RULE_aggregationOperator = 25;
    public static readonly RULE_function = 26;
    public static readonly RULE_keyword = 27;
    public static readonly RULE_literal = 28;

    public static readonly literalNames = [
        null, null, null, null, "'and'", "'or'", "'unless'", "'by'", "'without'", 
        "'on'", "'ignoring'", "'group_left'", "'group_right'", "'offset'", 
        "'bool'", "'sum'", "'min'", "'max'", "'avg'", "'group'", "'stddev'", 
        "'stdvar'", "'count'", "'count_values'", "'bottomk'", "'topk'", 
        "'quantile'", "'abs'", "'ceil'", "'floor'", "'round'", "'sqrt'", 
        "'exp'", "'ln'", "'log2'", "'log10'", "'sgn'", "'pi'", "'deg'", 
        "'rad'", "'acos'", "'acosh'", "'asin'", "'asinh'", "'atan'", "'atanh'", 
        "'cos'", "'cosh'", "'sin'", "'sinh'", "'tan'", "'tanh'", "'time'", 
        "'timestamp'", "'hour'", "'minute'", "'month'", "'year'", "'day_of_month'", 
        "'day_of_week'", "'day_of_year'", "'days_in_month'", "'delta'", 
        "'deriv'", "'idelta'", "'increase'", "'rate'", "'irate'", "'resets'", 
        "'present_over_time'", "'histogram_count'", "'histogram_sum'", "'histogram_fraction'", 
        "'histogram_quantile'", "'quantile_over_time'", "'avg_over_time'", 
        "'min_over_time'", "'max_over_time'", "'sum_over_time'", "'count_over_time'", 
        "'stddev_over_time'", "'stdvar_over_time'", "'last_over_time'", 
        "'absent'", "'absent_over_time'", "'predict_linear'", "'holt_winters'", 
        "'label_join'", "'label_replace'", "'scalar'", "'vector'", "'sort'", 
        "'sort_desc'", "'changes'", "'clamp'", "'clamp_max'", "'clamp_min'", 
        "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'='", "'=='", "'!='", 
        "'>'", "'<'", "'>='", "'<='", "'=~'", "'!~'", "'{'", "'}'", "'('", 
        "')'", "'['", "']'", "','", "';'", "'@'"
    ];

    public static readonly symbolicNames = [
        null, "NUMERAL", "SCIENTIFIC_NUMBER", "STRING", "KW_AND", "KW_OR", 
        "KW_UNLESS", "KW_BY", "KW_WITHOUT", "KW_ON", "KW_IGNORING", "KW_GROUP_LEFT", 
        "KW_GROUP_RIGHT", "KW_OFFSET", "KW_BOOL", "KW_SUM", "KW_MIN", "KW_MAX", 
        "KW_AVG", "KW_GROUP", "KW_STDDEV", "KW_STDVAR", "KW_COUNT", "KW_COUNT_VALUES", 
        "KW_BOTTOMK", "KW_TOPK", "KW_QUANTILE", "KW_ABS", "KW_CEIL", "KW_FLOOR", 
        "KW_ROUND", "KW_SQRT", "KW_EXP", "KW_LN", "KW_LOG2", "KW_LOG10", 
        "KW_SGN", "KW_PI", "KW_DEG", "KW_RAD", "KW_ACOS", "KW_ACOSH", "KW_ASIN", 
        "KW_ASINH", "KW_ATAN", "KW_ATANH", "KW_COS", "KW_COSH", "KW_SIN", 
        "KW_SINH", "KW_TAN", "KW_TANH", "KW_TIME", "KW_TIMESTAMP", "KW_HOUR", 
        "KW_MINUTE", "KW_MONTH", "KW_YEAR", "KW_DAY_OF_MONTH", "KW_DAY_OF_WEEK", 
        "KW_DAY_OF_YEAR", "KW_DAYS_IN_MONTH", "KW_DELTA", "KW_DERIV", "KW_IDELTA", 
        "KW_INCREASE", "KW_RATE", "KW_IRATE", "KW_RESETS", "KW_PRESENT_OVER_TIME", 
        "KW_HISTOGRAM_COUNT", "KW_HISTOGRAM_SUM", "KW_HISTOGRAM_FRACTION", 
        "KW_HISTOGRAM_QUANTILE", "KW_QUANTILE_OVER_TIME", "KW_AVG_OVER_TIME", 
        "KW_MIN_OVER_TIME", "KW_MAX_OVER_TIME", "KW_SUM_OVER_TIME", "KW_COUNT_OVER_TIME", 
        "KW_STDDEV_OVER_TIME", "KW_STDVAR_OVER_TIME", "KW_LAST_OVER_TIME", 
        "KW_ABSENT", "KW_ABSENT_OVER_TIME", "KW_PREDICT_LINEAR", "KW_HOLT_WINTERS", 
        "KW_LABEL_JOIN", "KW_LABEL_REPLACE", "KW_SCALAR", "KW_VECTOR", "KW_SORT", 
        "KW_SORT_DESC", "KW_CHANGES", "KW_CLAMP", "KW_CLAMP_MAX", "KW_CLAMP_MIN", 
        "ADD", "SUB", "MULT", "DIV", "MOD", "POW", "EQ", "DEQ", "NE", "GT", 
        "LT", "GE", "LE", "RE", "NRE", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAREN", 
        "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", "COMMA", "SEMI", 
        "AT", "SUBQUERY_RANGE", "TIME_RANGE", "DURATION", "METRIC_NAME", 
        "LABEL_NAME", "WS", "SL_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "singleStmt", "stmt", "unaryOp", "powOp", "multOp", "addOp", 
        "compareOp", "vector", "instantSelector", "labelMatcher", "labelMatcherOperator", 
        "labelMatcherList", "matrixSelector", "parameter", "parameterList", 
        "by", "without", "grouping", "on_", "ignoring", "groupLeft", "groupRight", 
        "labelName", "labelNameList", "aggregationOperator", "function", 
        "keyword", "literal",
    ];

    public get grammarFileName(): string { return "PromQLParser.g4"; }
    public get literalNames(): (string | null)[] { return PromQLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PromQLParser.symbolicNames; }
    public get ruleNames(): string[] { return PromQLParser.ruleNames; }
    public get serializedATN(): number[] { return PromQLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PromQLParser._ATN, PromQLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, PromQLParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 61;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4294934528) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1F) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1F) === 0 && ((1 << (_la - 96)) & 268763143) !== 0)) {
                {
                {
                this.state = 58;
                this.singleStmt();
                }
                }
                this.state = 63;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 64;
            this.match(PromQLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public singleStmt(): SingleStmtContext {
        let localContext = new SingleStmtContext(this.context, this.state);
        this.enterRule(localContext, 2, PromQLParser.RULE_singleStmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 66;
            this.stmt(0);
            this.state = 68;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 119) {
                {
                this.state = 67;
                this.match(PromQLParser.SEMI);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public stmt(): StmtContext;
    public stmt(_p: number): StmtContext;
    public stmt(_p?: number): StmtContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new StmtContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 4;
        this.enterRecursionRule(localContext, 4, PromQLParser.RULE_stmt, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 75;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PromQLParser.ADD:
            case PromQLParser.SUB:
                {
                this.state = 71;
                this.unaryOp();
                this.state = 72;
                this.stmt(9);
                }
                break;
            case PromQLParser.KW_SUM:
            case PromQLParser.KW_MIN:
            case PromQLParser.KW_MAX:
            case PromQLParser.KW_AVG:
            case PromQLParser.KW_GROUP:
            case PromQLParser.KW_STDDEV:
            case PromQLParser.KW_STDVAR:
            case PromQLParser.KW_COUNT:
            case PromQLParser.KW_COUNT_VALUES:
            case PromQLParser.KW_BOTTOMK:
            case PromQLParser.KW_TOPK:
            case PromQLParser.KW_QUANTILE:
            case PromQLParser.KW_ABS:
            case PromQLParser.KW_CEIL:
            case PromQLParser.KW_FLOOR:
            case PromQLParser.KW_ROUND:
            case PromQLParser.KW_SQRT:
            case PromQLParser.KW_EXP:
            case PromQLParser.KW_LN:
            case PromQLParser.KW_LOG2:
            case PromQLParser.KW_LOG10:
            case PromQLParser.KW_SGN:
            case PromQLParser.KW_PI:
            case PromQLParser.KW_DEG:
            case PromQLParser.KW_RAD:
            case PromQLParser.KW_ACOS:
            case PromQLParser.KW_ACOSH:
            case PromQLParser.KW_ASIN:
            case PromQLParser.KW_ASINH:
            case PromQLParser.KW_ATAN:
            case PromQLParser.KW_ATANH:
            case PromQLParser.KW_COS:
            case PromQLParser.KW_COSH:
            case PromQLParser.KW_SIN:
            case PromQLParser.KW_SINH:
            case PromQLParser.KW_TAN:
            case PromQLParser.KW_TANH:
            case PromQLParser.KW_TIME:
            case PromQLParser.KW_TIMESTAMP:
            case PromQLParser.KW_HOUR:
            case PromQLParser.KW_MINUTE:
            case PromQLParser.KW_MONTH:
            case PromQLParser.KW_YEAR:
            case PromQLParser.KW_DAY_OF_MONTH:
            case PromQLParser.KW_DAY_OF_WEEK:
            case PromQLParser.KW_DAY_OF_YEAR:
            case PromQLParser.KW_DAYS_IN_MONTH:
            case PromQLParser.KW_DELTA:
            case PromQLParser.KW_DERIV:
            case PromQLParser.KW_IDELTA:
            case PromQLParser.KW_INCREASE:
            case PromQLParser.KW_RATE:
            case PromQLParser.KW_IRATE:
            case PromQLParser.KW_RESETS:
            case PromQLParser.KW_PRESENT_OVER_TIME:
            case PromQLParser.KW_HISTOGRAM_COUNT:
            case PromQLParser.KW_HISTOGRAM_SUM:
            case PromQLParser.KW_HISTOGRAM_FRACTION:
            case PromQLParser.KW_HISTOGRAM_QUANTILE:
            case PromQLParser.KW_QUANTILE_OVER_TIME:
            case PromQLParser.KW_AVG_OVER_TIME:
            case PromQLParser.KW_MIN_OVER_TIME:
            case PromQLParser.KW_MAX_OVER_TIME:
            case PromQLParser.KW_SUM_OVER_TIME:
            case PromQLParser.KW_COUNT_OVER_TIME:
            case PromQLParser.KW_STDDEV_OVER_TIME:
            case PromQLParser.KW_STDVAR_OVER_TIME:
            case PromQLParser.KW_LAST_OVER_TIME:
            case PromQLParser.KW_ABSENT:
            case PromQLParser.KW_ABSENT_OVER_TIME:
            case PromQLParser.KW_PREDICT_LINEAR:
            case PromQLParser.KW_HOLT_WINTERS:
            case PromQLParser.KW_LABEL_JOIN:
            case PromQLParser.KW_LABEL_REPLACE:
            case PromQLParser.KW_SCALAR:
            case PromQLParser.KW_VECTOR:
            case PromQLParser.KW_SORT:
            case PromQLParser.KW_SORT_DESC:
            case PromQLParser.KW_CHANGES:
            case PromQLParser.KW_CLAMP:
            case PromQLParser.KW_CLAMP_MAX:
            case PromQLParser.KW_CLAMP_MIN:
            case PromQLParser.LEFT_BRACE:
            case PromQLParser.LEFT_PAREN:
            case PromQLParser.METRIC_NAME:
                {
                this.state = 74;
                this.vector();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 122;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
